prometheus/monitoring-aks/prometheus-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-discord
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-discord
  template:
    metadata:
      labels:
        app: prometheus-discord
    spec:
      containers:
      - name: prometheus-discord
        image: benjojo/alertmanager-discord
        ports:
        - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-discord
  namespace: monitoring
spec:
  selector:
    app: prometheus-discord
  ports:
  - port: 9094
    targetPort: 9094
